<resources>
    <string name="app_name">MCO3</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="login2">LOGIN</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="log_out">Log Out</string>
    <string name="logout_button_description">Logout Button</string>

    <!-- dashboard strings -->

    <string name="ek_img_content">ExportKit Image</string>
    <string name="today_string">Today</string>
    <string name="_76__string">76%</string>
    <string name="water_string">Water</string>
    <string name="sleep_string">Sleep</string>
    <string name="overall_string">Overall</string>
    <string name="brush_string">Brush</string>
    <string name="_76__ek1_string">76%</string>
    <string name="add_goals_string">Add Goals</string>
    <string name="water_ek1_string">Water</string>
    <string name="stay_hydrated_string">Stay hydrated</string>
    <string name="sleep_ek1_string">Sleep</string>
    <string name="get_enough_rest_string">Get enough rest</string>
    <string name="brush_ek1_string">Brush</string>
    <string name="stay_hygienic_string">Stay hygienic</string>
    <string name="dashboard_ek3_string">DASHBOARD</string>

    <!-- update__sleep strings -->

    <string name="_8_hrs_string">8 hrs</string>
    <string name="_6_hrs_string">6 hrs</string>
    <string name="input_hours_of_sleep_string">Input hours of sleep</string>
    <string name="update_sleep_string">UPDATE SLEEP</string>

    <!-- update__brush0 strings -->

    <string name="update_brush_string">UPDATE BRUSH</string>

    <!-- update__water strings -->


    <string name="update_water_string">UPDATE WATER</string>
    <string name="one_glass___250_ml_string">One Glass = 250 ml</string>
    <string name="_1785_ml_string">1890 ml</string>
    <string name="outOf">7 out of 8</string>
    <string name="add_glass_string">ADD GLASS</string>
    <string name="_750_ml_string">750 ml </string>
    <string name="_42__string">42%</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="earneye">

    OVERVIEW :

    Eyes and eyebrows are crucial for grating is they frame-the face and contribute significantly to avered Tacial expression

    Wall groomed eyebrows can enhance symmetry and attractiveness while cared for eyes convey vitality and personality

    They serve as fecal points, fluencing how others perceive ones appearance and demeanor making thes essential for both men and women seeking το πριονέ their looks
    </string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="msg_token_fmt" />
</resources>